--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav ms-auto">
             <li class="nav-item">
-              <a class="nav-link" href="#about">About</a>
+              <a class="nav-link" href="#projects">Projects</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="#services">Services</a>
@@ -69,7 +69,9 @@
             </h2> -->
             <button class="btn btn-dark mt-3">About Me</button>
             <div class="social-icons mt-3">
-              <a href="#" class="text-dark mx-2"
+              <a
+                href="https://www.linkedin.com/in/syed-usman-hassan-naqvi/"
+                class="text-dark mx-2"
                 ><i class="fab fa-linkedin"></i
               ></a>
               <a href="https://github.com/SydUsman" class="text-dark mx-2"
@@ -81,12 +83,16 @@
               <a href="#" class="text-dark mx-2"
                 ><i class="fab fa-telegram"></i
               ></a>
-              <a href="#" class="text-dark mx-2"><i class="fab fa-dev"></i></a>
+              <a href="https://dev.to/sydusman" class="text-dark mx-2"
+                ><i class="fab fa-dev"></i
+              ></a>
             </div>
           </div>
         </div>
       </div>
     </header>
+
+   
 
     <!-- Testimonials Section -->
     <section id="testimonials" class="testimonials section-padding bg-light">
@@ -118,7 +124,7 @@
     <!-- Footer -->
     <footer class="footer text-center">
       <div class="container">
-        <p>&copy; 2024 [Your Name]. All rights reserved.</p>
+        <p>&copy; 2024 Syed Usman Hassan</p>
       </div>
     </footer>
 
