--- a/about.html
+++ b/about.html
@@ -2,167 +2,282 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>About Me - Usman's Portfolio</title>
 
-  <!-- Styles -->
-  <link href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.1.3/css/bootstrap.min.css" rel="stylesheet" />
-  <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet" />
-  <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" />
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet" />
+  <!-- Vendor CSS -->
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.1.3/css/bootstrap.min.css" rel="stylesheet"/>
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet"/>
+  <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet"/>
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet"/>
 
   <style>
-    body {
-      font-family: 'Inter', sans-serif;
-      background-color: #f8f9fa;
-      color: #333;
-      scroll-behavior: smooth;
+    :root{
+      --bg: #f4f6f9;
+      --text: #333;
+      --muted:#6b7280;
+      --brand:#007bff;
+      --card:#ffffff;
+      --border: rgba(0,0,0,0.06);
+      --shadow: 0 8px 20px rgba(0,0,0,0.10);
+      --radius: 16px;
     }
 
-    .navbar {
-      background-color: #fff;
-      box-shadow: 0 2px 4px rgba(0, 0, 0, 0.05);
-      transition: all 0.3s ease;
+    body{ font-family:'Inter',sans-serif; background:var(--bg); color:var(--text); scroll-behavior:smooth; }
+
+    /* Navbar (match index) */
+    .navbar{ backdrop-filter: blur(12px); background: rgba(255,255,255,0.9); box-shadow: 0 2px 6px rgba(0,0,0,0.08); }
+    .navbar .nav-link{ color:#444; font-weight:500; transition: color .25s, transform .2s; }
+    .navbar .nav-link:hover{ color:var(--brand); transform: translateY(-1px); }
+
+    /* Page header */
+    .page-hero{
+      padding: 120px 0 60px;
+      background: linear-gradient(135deg, #e9f3ff, #ffffff);
+    }
+    .page-hero .avatar{
+      width:170px; height:170px; object-fit:cover; border-radius:50%;
+      box-shadow: 0 10px 26px rgba(0,0,0,.15);
+    }
+    .headline{ font-weight:700; }
+    .typed-role{ color:var(--brand); font-weight:600; }
+
+    /* Sections */
+    .section{ padding:70px 0; }
+    .card-soft{
+      background:var(--card); border:1px solid var(--border);
+      border-radius:var(--radius); box-shadow: var(--shadow);
+      transition: transform .25s ease, box-shadow .25s ease;
+    }
+    .card-soft:hover{ transform: translateY(-4px); box-shadow: 0 14px 28px rgba(0,0,0,.12); }
+
+    /* Quick facts */
+    .fact-icon{ font-size:1.4rem; color:var(--brand); width:40px; height:40px; display:inline-grid; place-items:center; background:#e8f1ff; border-radius:10px; }
+
+    /* Timeline (for mini-education if shown) */
+    .timeline{ position:relative; padding-left:28px; }
+    .timeline::before{ content:""; position:absolute; left:10px; top:0; bottom:0; width:2px; background:var(--brand); opacity:.2; }
+    .timeline-item{ margin-bottom:18px; }
+    .timeline-item h6{ margin:0 0 4px; font-weight:600; }
+
+    /* Gallery (personal highlights) */
+    .gallery-grid{ display:grid; gap:18px; grid-template-columns: repeat(auto-fit, minmax(240px, 1fr)); }
+    .gallery-item{ position:relative; overflow:hidden; border-radius:14px; background:#fff; border:1px solid var(--border); box-shadow: var(--shadow); }
+    .gallery-item img{ width:100%; height:220px; object-fit:cover; transition: transform .5s ease, filter .4s ease; }
+    .gallery-item:hover img{ transform: scale(1.06); filter: brightness(.92); }
+    .gallery-caption{
+      position:absolute; left:12px; bottom:12px;
+      background: rgba(255,255,255,.85);
+      padding:8px 12px; border-radius:10px; font-size:.9rem; font-weight:600; color:#111;
+      border:1px solid var(--border);
     }
 
-    .about {
-      padding: 100px 0;
-      background: #fff;
-    }
+    /* Lists */
+    .muted{ color:var(--muted); }
 
-    .about h1 {
-      font-size: 2.5rem;
-      font-weight: 700;
-      line-height: 1.2;
-      margin-bottom: 20px;
-    }
-
-    .about h1:hover {
-      color: #007bff;
-      text-shadow: 0 0 8px rgba(0, 123, 255, 0.4);
-    }
-
-    .about h3 {
-      font-size: 1.75rem;
-      font-weight: 600;
-      margin-top: 60px;
-    }
-
-    .about p {
-      font-size: 1.1rem;
-      color: #555;
-    }
-
-    .about img {
-      border-radius: 20px;
-      box-shadow: 0 10px 30px rgba(0,0,0,0.1);
-      transition: transform 0.3s ease;
-    }
-
-    .about img:hover {
-      transform: scale(1.05);
-    }
-
-    .gallery {
-      display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
-      gap: 20px;
-      margin-top: 30px;
-    }
-
-    .gallery img {
-      width: 100%;
-      border-radius: 15px;
-      transition: transform 0.4s ease;
-    }
-
-    .gallery img:hover {
-      transform: scale(1.08);
-    }
-
-    ul {
-      padding-left: 20px;
-    }
-
-    .footer {
-      background-color: #343a40;
-      color: #fff;
-      padding: 20px 0;
-      text-align: center;
-    }
-
-    [data-aos] {
-      transition-timing-function: ease-in-out;
-    }
-
-    #typed-role {
-      color: #007bff;
-      font-weight: 600;
-    }
+    /* Footer (match index) */
+    .footer{ background:#1c1c1c; color:#fff; padding:22px 0; text-align:center; }
   </style>
 </head>
 <body>
 
   <!-- Navbar -->
-  <nav class="navbar navbar-expand-lg navbar-light fixed-top">
+  <nav class="navbar navbar-expand-lg fixed-top">
     <div class="container">
       <a class="navbar-brand fw-bold" href="index.html">Usman's Portfolio</a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#nav">
         <span class="navbar-toggler-icon"></span>
       </button>
-      <div class="collapse navbar-collapse" id="navbarNav">
-        <ul class="navbar-nav ms-auto">
+      <div class="collapse navbar-collapse" id="nav">
+        <ul class="navbar-nav ms-auto align-items-lg-center">
+          <li class="nav-item me-lg-3"><a class="nav-link" href="index.html#projects">Projects</a></li>
+          <li class="nav-item me-lg-3"><a class="nav-link" href="index.html#contact">Contact</a></li>
           <li class="nav-item">
-            <a class="nav-link" href="/resume/Syed Usman Hassan - Resume.pdf" download><u>Download Resume</u></a>
+            <!-- TODO: update the resume path -->
+            <a class="nav-link btn btn-sm btn-primary text-white px-3 ms-lg-2" href="/resume/Syed Usman Hassan - Resume.pdf" download>
+              <i class="fas fa-download me-1"></i> Resume
+            </a>
           </li>
         </ul>
       </div>
     </div>
   </nav>
 
-  <!-- About Section -->
-  <section class="about">
+  <!-- Hero -->
+  <header class="page-hero">
     <div class="container">
-      <div class="row align-items-center mb-5">
-        <div class="col-md-6" data-aos="fade-right">
-          <h1>Hey, I'm <strong>Usman</strong><br/><span id="typed-role"></span></h1>
+      <div class="row align-items-center g-4">
+        <div class="col-md-8" data-aos="fade-right">
+          <h1 class="headline mb-2">Hey, I'm <span class="fw-bold">Syed Usman Hassan</span></h1>
+          <h3 class="typed-role mb-3"><span id="typed-role"></span></h3>
+          <p class="muted mb-4">
+            Full Stack .NET developer building reliable, scalable systems with <b>ASP.NET Core</b>, <b>Blazor</b>, and <b>SQL Server</b>.
+            Currently crafting internal products and integrations at <b>Fauji Fertilizer Company (FFC)</b>, open to freelance & project-based work.
+          </p>
+          <div class="d-flex gap-2">
+            <a href="https://www.linkedin.com/in/syed-usman-hassan-naqvi/" target="_blank" class="btn btn-outline-primary">
+              <i class="fab fa-linkedin me-1"></i> LinkedIn
+            </a>
+            <a href="https://github.com/SydUsman" target="_blank" class="btn btn-outline-dark">
+              <i class="fab fa-github me-1"></i> GitHub
+            </a>
+          </div>
         </div>
-        <div class="col-md-6 text-center" data-aos="fade-left">
-          <img src="/images/syd2.jpeg" alt="Usman Hassan" class="img-fluid" />
+        <div class="col-md-4 text-center" data-aos="fade-left">
+          <!-- TODO: update image path -->
+          <img src="/images/syd2.jpeg" alt="Syed Usman Hassan" class="avatar"/>
         </div>
       </div>
+    </div>
+  </header>
 
-      <div class="info" data-aos="fade-up" data-aos-delay="200">
-        <p>
-          I'm a full-stack software developer with a solid background in creating scalable and efficient solutions for businesses. I hold a Bachelor’s degree in <strong>Computer Science</strong> from COMSATS University Islamabad (Class of 2023) and currently work as a Software Developer at Fauji Fertilizer Company (FFC).
+  <!-- Quick Facts -->
+  <section class="section">
+    <div class="container">
+      <div class="row g-4">
+        <div class="col-lg-7">
+          <div class="card-soft p-4 h-100" data-aos="fade-up">
+            <h4 class="fw-bold mb-3">About Me</h4>
+            <p class="mb-3">
+              I design and ship business-critical apps: approvals, bookings, workflow automation, and integrations.
+              Strengths include <b>C#/.NET 8</b>, <b>ASP.NET Core</b>, <b>Blazor</b>, <b>EF Core</b>, and <b>SQL</b>—plus RPA (UiPath) and SAP integration when needed.
+            </p>
+            <div class="row g-3">
+              <div class="col-sm-6">
+                <div class="d-flex align-items-center gap-3">
+                  <div class="fact-icon"><i class="fas fa-briefcase"></i></div>
+                  <div>
+                    <div class="fw-semibold">Current</div>
+                    <div class="muted small">Software Engineer @ FFC</div>
+                  </div>
+                </div>
+              </div>
+              <div class="col-sm-6">
+                <div class="d-flex align-items-center gap-3">
+                  <div class="fact-icon"><i class="fas fa-microchip"></i></div>
+                  <div>
+                    <div class="fw-semibold">Focus</div>
+                    <div class="muted small">Blazor, APIs, Workflows, SSO</div>
+                  </div>
+                </div>
+              </div>
+              <div class="col-sm-6">
+                <div class="d-flex align-items-center gap-3">
+                  <div class="fact-icon"><i class="fas fa-award"></i></div>
+                  <div>
+                    <div class="fw-semibold">Recognition</div>
+                    <div class="muted small">Honorary Shield – ICT @ FFC</div>
+                  </div>
+                </div>
+              </div>
+              <div class="col-sm-6">
+                <div class="d-flex align-items-center gap-3">
+                  <div class="fact-icon"><i class="fas fa-certificate"></i></div>
+                  <div>
+                    <div class="fw-semibold">Certifications</div>
+                    <div class="muted small">React (HackerRank), Career Essentials (MS x LinkedIn)</div>
+                  </div>
+                </div>
+              </div>
+            </div>
 
-          <br /><br />I’ve worked across .NET, Blazor, JavaScript, Python, and even SAP ABAP for system integration. My goal is to make clean, reliable, and user-friendly software — whether that’s an enterprise-grade workflow or a startup MVP.
+            <hr class="my-4"/>
 
-          <br /><br />I love solving real-world problems through code and collaborating with teams to ship high-impact solutions.
-        </p>
+            <h6 class="fw-bold">Core Stack</h6>
+            <div class="d-flex flex-wrap gap-2">
+              <span class="badge bg-primary">C#</span>
+              <span class="badge bg-dark">.NET 8</span>
+              <span class="badge bg-secondary">ASP.NET Core</span>
+              <span class="badge bg-info text-dark">Blazor</span>
+              <span class="badge bg-warning text-dark">SQL Server</span>
+              <span class="badge bg-success">EF Core</span>
+              <span class="badge bg-secondary">REST APIs</span>
+              <span class="badge bg-primary">GitHub</span>
+            </div>
+          </div>
+        </div>
 
-        <h3>Certifications & Recognition</h3>
-        <ul>
-          <li>
-            <strong>Certifications:</strong>
-            <ul>
-              <li>React JS Basics – HackerRank</li>
-              <li>Career Essentials in Software Development – Microsoft x LinkedIn</li>
+        <!-- Education & Quick Timeline -->
+        <div class="col-lg-5">
+          <div class="card-soft p-4 h-100" data-aos="fade-up" data-aos-delay="100">
+            <h4 class="fw-bold mb-3">Education</h4>
+            <div class="timeline">
+              <div class="timeline-item">
+                <h6>B.S. Computer Science</h6>
+                <div class="muted small">PMAS Arid Agriculture University (2019–2023)</div>
+              </div>
+              <div class="timeline-item">
+                <h6>Intermediate (Pre-Engineering)</h6>
+                <div class="muted small">F.G. Sir Syed College (2017–2019)</div>
+              </div>
+            </div>
+
+            <hr class="my-4"/>
+
+            <h4 class="fw-bold mb-3">Highlights</h4>
+            <ul class="mb-0">
+              <li class="muted">Built workflow-driven internal apps (approvals, bookings, notifications).</li>
+              <li class="muted">Implemented SAP integration + SSO; automated tasks with UiPath.</li>
+              <li class="muted">Known for clean code, fast delivery, and strong stakeholder comms.</li>
             </ul>
-          </li>
-          <li>
-            <strong>Honors:</strong>
-            <ul>
-              <li>Honorary Shield awarded by ICT Department – FFC</li>
-            </ul>
-          </li>
-        </ul>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
 
-        <h3>Gallery</h3>
-        <div class="gallery">
-          <img src="/images/syd4.jpeg" alt="Project 1" />
-          <img src="/images/syd1.jpeg" alt="Project 2" />
-          <img src="/images/syd3.jpeg" alt="Project 3" />
+  <!-- Personal Highlights Gallery (Awards / Events / Certificates) -->
+  <section class="section bg-light">
+    <div class="container">
+      <div class="d-flex align-items-center justify-content-between mb-3">
+        <h4 class="fw-bold mb-0">My Journey in Pictures</h4>
+        <!-- Optional: small hint -->
+        <span class="small text-muted">Awards • Certificates • Events</span>
+      </div>
+
+      <div class="gallery-grid" data-aos="fade-up">
+        <!-- Replace with your real images -->
+        <figure class="gallery-item">
+          <img src="/images/syd1.jpeg" alt="Receiving Honorary Shield at FFC">
+          <figcaption class="gallery-caption">Custom App Development</figcaption>
+        </figure>
+        <figure class="gallery-item">
+          <img src="/images/syd2.jpeg" alt="Certification Ceremony">
+          <figcaption class="gallery-caption">.NET Migration Project</figcaption>
+        </figure>
+        <figure class="gallery-item">
+          <img src="/images/syd3.jpeg" alt="Speaking at Tech Session">
+          <figcaption class="gallery-caption">CSS Society Recognition</figcaption>
+        </figure>
+        <figure class="gallery-item">
+          <img src="/images/syd4.jpeg" alt="Workshop Participation">
+          <figcaption class="gallery-caption">Workshop Participation</figcaption>
+        </figure>
+        <figure class="gallery-item">
+          <img src="/images/syd5.jpeg" alt="Team Recognition">
+          <figcaption class="gallery-caption">Bon'Pe Trip</figcaption>
+        </figure>
+        <figure class="gallery-item">
+          <img src="/images/syd6.jpeg" alt="Professional Certification">
+          <figcaption class="gallery-caption">Just a Click</figcaption>
+        </figure>
+      </div>
+    </div>
+  </section>
+
+  <!-- CTA -->
+  <section class="section">
+    <div class="container">
+      <div class="card-soft p-4 d-flex flex-column flex-md-row align-items-md-center justify-content-between" data-aos="fade-up">
+        <div class="mb-3 mb-md-0">
+          <h5 class="fw-bold mb-1">Want to collaborate?</h5>
+          <div class="muted">I’m open to freelance & project-based .NET work.</div>
+        </div>
+        <div class="d-flex gap-2">
+          <a href="mailto:usmanhassannaqvi@gmail.com" class="btn btn-dark"><i class="fas fa-envelope me-1"></i> Email</a>
+          <a href="https://calendly.com/syedusmanhassan1/30min" target="_blank" class="btn btn-primary">
+            <i class="fas fa-calendar-alt me-1"></i> Book a Meeting
+          </a>
         </div>
       </div>
     </div>
@@ -171,7 +286,7 @@
   <!-- Footer -->
   <footer class="footer">
     <div class="container">
-      <p>&copy; 2025 Syed Usman Hassan</p>
+      <p class="mb-0">&copy; 2025 Syed Usman Hassan. All rights reserved.</p>
     </div>
   </footer>
 
@@ -180,17 +295,11 @@
   <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.12"></script>
   <script>
-    AOS.init({
-      duration: 1000,
-      once: true,
-    });
+    AOS.init({ duration: 900, once: true });
 
     new Typed('#typed-role', {
-      strings: ["Full-Stack Developer", "Blazor Specialist", "Problem Solver"],
-      typeSpeed: 60,
-      backSpeed: 30,
-      backDelay: 1500,
-      loop: true
+      strings: ["Full Stack .NET Developer", "Blazor Specialist", "Workflow & Integration Engineer"],
+      typeSpeed: 55, backSpeed: 28, backDelay: 1400, loop: true
     });
   </script>
 </body>
