--- a/index.html
+++ b/index.html
@@ -10,93 +10,38 @@
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet" />
 
   <style>
-    body {
-  font-family: 'Inter', sans-serif;
-  background-color: #f8f9fa;
-  color: #333;
-  scroll-behavior: smooth;
-}
+    body { font-family: 'Inter', sans-serif; background: #f4f6f9; color: #333; scroll-behavior: smooth; }
 
-.navbar {
-  background-color: #fff;
-  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.05);
-}
+    /* Navbar */
+    .navbar { backdrop-filter: blur(12px); background: rgba(255,255,255,0.9); box-shadow: 0 2px 6px rgba(0,0,0,0.08); }
+    .navbar .nav-link { color: #444; font-weight: 500; transition: color 0.3s, transform 0.2s; }
+    .navbar .nav-link:hover { color: #007bff; transform: translateY(-2px); }
 
-.header {
-  background-color: #ffffff;
-  text-align: center;
-  padding-top: 140px;
-  padding-bottom: 100px;
-  box-shadow: inset 0 -1px 0 #e9ecef; /* subtle bottom border */
-}
+    /* Header */
+    .header { text-align: center; padding: 120px 0 80px; background: linear-gradient(135deg, #dceeff, #fdfdfd); }
+    .header img { width: 150px; height: 150px; border-radius: 50%; margin-bottom: 20px; box-shadow: 0 6px 18px rgba(0,0,0,0.2); }
+    .typing { color: #007bff; font-weight: 600; }
 
-.header img {
-  width: 150px;
-  height: 150px;
-  border-radius: 50%;
-  margin-bottom: 20px;
-  box-shadow: 0 4px 12px rgba(0,0,0,0.1);
-}
+    /* Sections */
+    .section-padding { padding: 80px 0; }
+    .glass-card { background: #fff; border-radius: 12px; border: 1px solid rgba(0,0,0,0.05); transition: 0.3s; }
+    .glass-card:hover { transform: translateY(-6px); box-shadow: 0 8px 20px rgba(0,0,0,0.12); }
 
-.header h1 {
-  font-size: 2.5rem;
-  font-weight: 700;
-}
+    /* Timeline (Experience + Education) */
+    .timeline { position: relative; padding-left: 30px; }
+    .timeline::before { content: ""; position: absolute; left: 10px; top: 0; bottom: 0; width: 2px; background: #007bff; }
+    .timeline-item { margin-bottom: 30px; }
+    .timeline-item h5 { margin-bottom: 5px; font-weight: 600; }
 
-.header h2 {
-  font-size: 1.25rem;
-  color: #6c757d;
-}
-
-.header .social-icons a {
-  font-size: 1.5rem;
-  color: #333;
-  margin: 0 10px;
-  transition: color 0.3s;
-}
-
-.header .social-icons a:hover {
-  color: #007bff;
-}
-
-.section-padding {
-  padding: 80px 0;
-}
-
-.card-title {
-  font-weight: 600;
-  color: #212529;
-}
-
-.card-text {
-  color: #6c757d;
-}
-
-.service-box:hover {
-  background: linear-gradient(to top left, #f8f9fa, #ffffff);
-  box-shadow: 0 12px 24px rgba(0, 0, 0, 0.1);
-  transform: scale(1.03);
-  transition: all 0.3s ease;
-}
-
-.footer {
-  background-color: #343a40;
-  color: #fff;
-  padding: 20px 0;
-  text-align: center;
-}
-
-.footer p {
-  margin: 0;
-}
-
+    .sticky-btn { position: fixed; bottom: 20px; right: 20px; z-index: 1000; }
+    .footer { background: #1c1c1c; color: #fff; padding: 20px 0; text-align: center; }
+    .icon-box { font-size: 2rem; color: #007bff; margin-bottom: 10px; }
   </style>
 </head>
-
 <body>
 
   <!-- Navbar -->
-  <nav class="navbar navbar-expand-lg navbar-light fixed-top">
+  <nav class="navbar navbar-expand-lg fixed-top">
     <div class="container">
       <a class="navbar-brand fw-bold" href="#">Usman's Portfolio</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
@@ -105,129 +50,155 @@
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav ms-auto">
           <li class="nav-item"><a class="nav-link" href="about.html">About</a></li>
+          <li class="nav-item"><a class="nav-link" href="#skills">Skills</a></li>
           <li class="nav-item"><a class="nav-link" href="#projects">Projects</a></li>
-          <li class="nav-item"><a class="nav-link" href="#services">Services</a></li>
-          <li class="nav-item"><a class="nav-link" href="#testimonials">Testimonials</a></li>
-          <li class="nav-item"><a class="nav-link" href="/resume/Syed Usman Hassan - Resume.pdf" download><u>Download Resume</u></a></li>
+          <li class="nav-item"><a class="nav-link" href="#experience">Experience</a></li>
+          <li class="nav-item"><a class="nav-link" href="#recommendation">Recommendation</a></li>
+          <li class="nav-item"><a class="nav-link" href="#contact">Contact</a></li>
         </ul>
       </div>
     </div>
   </nav>
 
   <!-- Header -->
-  <header class="header">
+  <header class="header" id="about">
     <div class="container">
       <img src="/images/sydusman.jpg" alt="Syed Usman Hassan" />
       <h1>Hi, I'm <strong>Syed Usman Hassan</strong></h1>
-      <h2>Full Stack .NET Developer</h2>
-      <a href="mailto:usmanhassannaqvi@gmail.com" class="btn btn-dark mt-3">
-        <i class="fas fa-envelope"></i> Contact Me
-      </a>
+      <h2><span class="typing"></span></h2>
+      <p class="mt-3 text-muted">Software Engineer @ FFC | Open to Freelance & Project-Based Work</p>
       <div class="social-icons mt-3">
-        <a href="https://www.linkedin.com/in/syed-usman-hassan-naqvi/" target="_blank"><i class="fab fa-linkedin"></i></a>
-        <a href="https://github.com/SydUsman" target="_blank"><i class="fab fa-github"></i></a>
-        <a href="#" target="_blank"><i class="fab fa-twitter"></i></a>
+        <a href="https://www.linkedin.com/in/syed-usman-hassan-naqvi/" target="_blank"><i class="fab fa-linkedin fa-2x mx-2"></i></a>
+        <a href="https://github.com/SydUsman" target="_blank"><i class="fab fa-github fa-2x mx-2"></i></a>
       </div>
     </div>
   </header>
 
-  <!-- Projects -->
-  <section id="projects" class="section-padding bg-light">
-    <div class="container">
-      <h2 class="text-center fw-bold mb-5" data-aos="fade-up">Featured Projects</h2>
-      <div class="row g-4">
-
-        <div class="col-md-4" data-aos="fade-up" data-aos-delay="400">
-          <div class="card h-100 shadow-sm border-0 rounded-4">
-            <img src="/images/po-app.png" class="card-img-top rounded-top-4" alt="Payment Order App" />
-            <div class="card-body">
-              <h5 class="card-title">Payment Order App – FFC HO</h5>
-              <p class="card-text">Blazor-based PO submission system with manual and automated approval workflows, file attachments, and audit trail support.</p>
-            </div>
-          </div>
-        </div>
-
-        <div class="col-md-4" data-aos="fade-up" data-aos-delay="100">
-          <div class="card h-100 shadow-sm border-0 rounded-4">
-            <img src="/images/booking.jpg" class="card-img-top rounded-top-4" alt="Booking App" />
-            <div class="card-body">
-              <h5 class="card-title">Booking System – FFC Port Qasim</h5>
-              <p class="card-text">Workflow-based scheduling system enabling staff and visitors to manage bookings seamlessly. <span class="text-muted">Go-Live: Nov 2024</span></p>
-            </div>
-          </div>
-        </div>
-        <div class="col-md-4" data-aos="fade-up" data-aos-delay="200">
-          <div class="card h-100 shadow-sm border-0 rounded-4">
-            <img src="/images/messapp.jpg" class="card-img-top rounded-top-4" alt="Mess App" />
-            <div class="card-body">
-              <h5 class="card-title">Mess Management System – FFC HO</h5>
-              <p class="card-text">Smart meal distribution and monthly deduction system for employees. <span class="text-muted">Go-Live: Sep 2024</span></p>
-            </div>
-          </div>
-        </div>
-        <div class="col-md-4" data-aos="fade-up" data-aos-delay="300">
-          <div class="card h-100 shadow-sm border-0 rounded-4">
-            <img src="/images/mern.png" class="card-img-top rounded-top-4" alt="EtherX Platform" />
-            <div class="card-body">
-              <h5 class="card-title">EtherX</h5>
-              <p class="card-text">Freelance marketplace built on MERN stack with blockchain-integrated payments.</p>
-            </div>
-          </div>
-        </div>        
-      </div>
-    </div>
-  </section>
-
-  <!-- Services -->
-  <section id="services" class="section-padding">
+  <!-- Skills -->
+  <section id="skills" class="section-padding bg-light">
     <div class="container text-center">
-      <h2 class="mb-5 fw-bold" data-aos="fade-up">What I Offer</h2>
-      <div class="row g-4 justify-content-center">
-        <div class="col-md-3 col-sm-6" data-aos="zoom-in" data-aos-delay="100">
-          <div class="p-4 bg-white shadow rounded-4 h-100 service-box">
-            <i class="fas fa-code fa-2x mb-3 text-primary"></i>
-            <h5>Custom Web Development</h5>
-            <p class="text-muted">Blazing-fast .NET and Blazor apps, built to scale and adapt to your workflows.</p>
-          </div>
-        </div>
-        <div class="col-md-3 col-sm-6" data-aos="zoom-in" data-aos-delay="200">
-          <div class="p-4 bg-white shadow rounded-4 h-100 service-box">
-            <i class="fas fa-object-group fa-2x mb-3 text-primary"></i>
-            <h5>UI/UX Design</h5>
-            <p class="text-muted">Polished interfaces that combine functionality with modern aesthetic appeal.</p>
-          </div>
-        </div>
-        <div class="col-md-3 col-sm-6" data-aos="zoom-in" data-aos-delay="300">
-          <div class="p-4 bg-white shadow rounded-4 h-100 service-box">
-            <i class="fas fa-cogs fa-2x mb-3 text-primary"></i>
-            <h5>API & Database Integration</h5>
-            <p class="text-muted">RESTful APIs, Oracle, SQL Server — seamlessly connected for smart systems.</p>
-          </div>
-        </div>
+      <h2 class="fw-bold mb-5" data-aos="fade-up">Tech Stack</h2>
+      <div class="row g-4">
+        <div class="col-md-3"><div class="glass-card p-4"><div class="icon-box"><i class="fas fa-code"></i></div><h6>.NET & Backend</h6><p>C#, .NET 8, ASP.NET Core, Blazor, Microservices</p></div></div>
+        <div class="col-md-3"><div class="glass-card p-4"><div class="icon-box"><i class="fas fa-database"></i></div><h6>Databases</h6><p>SQL Server, Oracle, EF Core</p></div></div>
+        <div class="col-md-3"><div class="glass-card p-4"><div class="icon-box"><i class="fas fa-cogs"></i></div><h6>Automation</h6><p>RPA (UiPath), SAP Integration, Cron Jobs</p></div></div>
+        <div class="col-md-3"><div class="glass-card p-4"><div class="icon-box"><i class="fas fa-tools"></i></div><h6>Other Tools</h6><p>DevExpress, GitHub, SSO, Agile</p></div></div>
       </div>
     </div>
   </section>
 
-  <!-- Testimonials -->
-  <section id="testimonials" class="section-padding bg-light">
-    <div class="container">
-      <h2 class="text-center fw-bold mb-5" data-aos="fade-up">Words From Clients</h2>
-      <div class="row justify-content-center g-4">
-        <div class="col-md-5" data-aos="fade-right">
-          <div class="bg-white shadow rounded-4 p-4 h-100">
-            <p class="fst-italic mb-3">“Usman’s dedication and commitment were unmatched. He not only delivered before the deadline but also suggested great improvements.”</p>
-            <footer class="fw-semibold text-end">— Jane Doe, CEO at InnovateX</footer>
-          </div>
-        </div>
-        <div class="col-md-5" data-aos="fade-left">
-          <div class="bg-white shadow rounded-4 p-4 h-100">
-            <p class="fst-italic mb-3">“The internal workflow automation saved our team hours every week. Exceptional work ethic and code quality.”</p>
-            <footer class="fw-semibold text-end">— John Smith, PM at WebSolutions</footer>
+ <!-- Projects -->
+<section id="projects" class="section-padding bg-light">
+  <div class="container">
+    <h2 class="text-center fw-bold mb-5" data-aos="fade-up">Featured Projects</h2>
+    <div class="row g-4">
+      
+      <!-- Project Card -->
+      <div class="col-md-4">
+        <div class="project-card shadow-sm rounded overflow-hidden h-100" data-aos="fade-up">
+          <img src="./images/po-app.png" class="img-fluid" alt="Payment Order App">
+          <div class="p-4">
+            <h5 class="fw-bold">Payment Order App</h5>
+            <p class="text-muted small">Digitalized workflows with approvals & audit trails using Blazor + SQL Server.</p>
+            <div class="mb-2">
+              <span class="badge bg-primary">Blazor Auto</span>
+              <span class="badge bg-secondary">SQL Server</span>
+              <span class="badge bg-dark">.NET</span>
+            </div>
+            <a href="https://github.com/SydUsman/FFC-Orbit" class="btn btn-sm btn-outline-primary me-2"><i class="fab fa-github"></i> Code</a>
+            <a href="#" class="btn btn-sm btn-primary"><i class="fas fa-external-link-alt"></i> Live</a>
           </div>
         </div>
       </div>
+
+      <!-- Project Card -->
+      <div class="col-md-4">
+        <div class="project-card shadow-sm rounded overflow-hidden h-100" data-aos="fade-up" data-aos-delay="100">
+          <img src="./images/messapp.jpg" class="img-fluid" alt="Mess Management System">
+          <div class="p-4">
+            <h5 class="fw-bold">Mess Management System</h5>
+            <p class="text-muted small">Automated billing, attendance, and menu tracking with notifications.</p>
+            <div class="mb-2">
+              <span class="badge bg-primary">Blazor Server</span>
+              <span class="badge bg-secondary">SQL</span>
+              <span class="badge bg-dark">DevExpress</span>
+            </div>
+            <a href="https://github.com/ahsan-iqbal/SAP-APP" class="btn btn-sm btn-outline-primary me-2"><i class="fab fa-github"></i> Code</a>
+            <a href="#" class="btn btn-sm btn-primary"><i class="fas fa-external-link-alt"></i> Live</a>
+          </div>
+        </div>
+      </div>
+
+      <!-- Project Card -->
+      <div class="col-md-4">
+        <div class="project-card shadow-sm rounded overflow-hidden h-100" data-aos="fade-up" data-aos-delay="200">
+          <img src="images/booking.jpg" class="img-fluid" alt="Facility Booking System">
+          <div class="p-4">
+            <h5 class="fw-bold">Facility Booking System</h5>
+            <p class="text-muted small">Workflow-driven scheduling with cancellations, cron jobs & alerts.</p>
+            <div class="mb-2">
+              <span class="badge bg-primary">Blazor Server</span>
+              <span class="badge bg-secondary">Cron Jobs</span>
+              <span class="badge bg-dark">SQL</span>
+            </div>
+            <a href="https://github.com/ahsan-iqbal/SAP-APP" class="btn btn-sm btn-outline-primary me-2"><i class="fab fa-github"></i> Code</a>
+            <a href="# class="btn btn-sm btn-primary"><i class="fas fa-external-link-alt"></i> Live</a>
+          </div>
+        </div>
+      </div>
+
+    </div>
+  </div>
+</section>
+
+  <!-- Experience -->
+  <section id="experience" class="section-padding bg-light">
+    <div class="container">
+      <h2 class="text-center fw-bold mb-5" data-aos="fade-up">Experience</h2>
+      <div class="timeline">
+        <div class="timeline-item"><h5>Software Engineer – FFC (2024–Present)</h5><p>Custom .NET apps, SAP integration, SSO, RPA automation, workflow solutions.</p></div>
+        <div class="timeline-item"><h5>Network Engineer – NTC (2023–2024)</h5><p>Managed ITIL tickets, Intranet-NOC support, switch monitoring.</p></div>
+        <div class="timeline-item"><h5>PHP Developer Intern – WebHive (2023)</h5><p>Developed backend web applications using PHP.</p></div>
+      </div>
     </div>
   </section>
+
+  <!-- Education (Timeline style) -->
+  <section id="education" class="section-padding">
+    <div class="container">
+      <h2 class="text-center fw-bold mb-5" data-aos="fade-up">Education</h2>
+      <div class="timeline">
+        <div class="timeline-item"><h5>Bachelor of Science in Computer Science</h5><p>COMSATS University Islamabad, Sahiwal Campus (2019–2023)</p></div>
+        <div class="timeline-item"><h5>Intermediate in Pre-Engineering</h5><p>Punjab College, Sahiwal (2017–2019)</p></div>
+      </div>
+    </div>
+  </section>
+
+  <!-- Recommendation -->
+  <section id="recommendation" class="section-padding bg-light">
+    <div class="container text-center">
+      <h2 class="fw-bold mb-5" data-aos="fade-up">Recommendation</h2>
+      <div class="glass-card p-4 mx-auto" style="max-width:800px;">
+        <p class="fst-italic">“I had the pleasure of working with Usman and I can confidently say he is a highly dedicated and talented Dot Net developer. 
+        He consistently delivered clean, efficient, and well-structured code, often going the extra mile to solve problems and improve user experience. 
+        Any team would be lucky to have someone as reliable and driven as him.”</p>
+        <footer class="fw-semibold text-end">— Hassan Tariq, SAP ABAP Developer</footer>
+      </div>
+    </div>
+  </section>
+
+  <!-- Contact -->
+  <section id="contact" class="section-padding">
+    <div class="container text-center">
+      <h2 class="fw-bold mb-4" data-aos="fade-up">Get In Touch</h2>
+      <p class="text-muted mb-4">Let’s collaborate on your next project or automation solution.</p>
+      <a href="mailto:usmanhassannaqvi@gmail.com" class="btn btn-dark me-2"><i class="fas fa-envelope"></i> Email</a>
+      <a href="https://calendly.com/syedusmanhassan1/30min" target="_blank" class="btn btn-primary"><i class="fas fa-calendar-alt"></i> Book a Meeting</a>
+    </div>
+  </section>
+
+  <!-- Sticky Button -->
+  <a href="https://calendly.com/syedusmanhassan1/30min" target="_blank" class="btn btn-primary sticky-btn shadow"><i class="fas fa-calendar-alt"></i> Book a Free Session</a>
 
   <!-- Footer -->
   <footer class="footer">
@@ -239,10 +210,12 @@
   <!-- Scripts -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.1.3/js/bootstrap.bundle.min.js"></script>
   <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.12"></script>
   <script>
-    AOS.init({
-      duration: 1000,
-      once: true,
+    AOS.init({ duration: 1000, once: true });
+    var typed = new Typed('.typing', {
+      strings: ["Full Stack .NET Developer", "Blazor Specialist", "Open to Project-Based Work"],
+      typeSpeed: 50, backSpeed: 25, loop: true
     });
   </script>
 </body>
