--- a/about.html
+++ b/about.html
@@ -204,11 +204,11 @@
             <div class="timeline">
               <div class="timeline-item">
                 <h6>B.S. Computer Science</h6>
-                <div class="muted small">PMAS Arid Agriculture University (2019–2023)</div>
+                <div class="muted small">COMSATS University Islamabad, Sahiwal Campus(2019–2023)</div>
               </div>
               <div class="timeline-item">
                 <h6>Intermediate (Pre-Engineering)</h6>
-                <div class="muted small">F.G. Sir Syed College (2017–2019)</div>
+                <div class="muted small">Punjab College Sahiwal(2017–2019)</div>
               </div>
             </div>
 
